<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>no.nav.varsel</groupId>
	<artifactId>varsel</artifactId>
	<packaging>pom</packaging>
	<version>1-SNAPSHOT</version>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>tvarsel001</module>
		<module>kvarsel001</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.4</version>
	</parent>

	<properties>
		<java.version>21</java.version>

		<guava.version>33.3.1-jre</guava.version>
		<ibm.mq.client.version>9.4.1.0</ibm.mq.client.version>
		<joda.version>2.13.0</joda.version>

		<logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
		<kafka-avro-serializer.version>7.7.1</kafka-avro-serializer.version>
		<resilience4j.version>2.2.0</resilience4j.version>
		<context-propagation.version>1.1.2</context-propagation.version>

		<!-- NAV -->
		<teamdokumenthandtering-avro-schemas.version>1.1.6</teamdokumenthandtering-avro-schemas.version>
		<brukernotifikasjon.version>v2.5.2</brukernotifikasjon.version>
		<avro.version>1.11.4</avro.version>
		<dok-legacy-tjenestespesifikasjoner.version>29-af3d66d</dok-legacy-tjenestespesifikasjoner.version>
		<dokmet-api.version>2024.10.23-12.35-3fce0da</dokmet-api.version>

		<!-- test -->
		<spring-cloud-contract-wiremock.version>4.1.2</spring-cloud-contract-wiremock.version>
		<!-- Spring Boot 3.0.x drar inn versjon 2.1.x av h2 som gir problem for testene -->
		<h2.version>1.4.200</h2.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.varsel</groupId>
				<artifactId>service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.varsel</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.varsel</groupId>
				<artifactId>jms</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.varsel</groupId>
				<artifactId>jms-consumer</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.varsel</groupId>
				<artifactId>web</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.varsel</groupId>
				<artifactId>tvarsel001</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.varsel</groupId>
				<artifactId>kvarsel001</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.confluent</groupId>
				<artifactId>kafka-avro-serializer</artifactId>
				<version>${kafka-avro-serializer.version}</version>
			</dependency>
			<!-- kafka-avro-serializer, brukernotifikasjon-schemas, teamdokumenthandtering-avro-schemas tar alle inn
			 avro som avhengighet. Vi ønsker å tvinge 1.11.4+ -->
			<dependency>
				<groupId>org.apache.avro</groupId>
				<artifactId>avro</artifactId>
				<version>${avro.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.teamdokumenthandtering</groupId>
				<artifactId>teamdokumenthandtering-avro-schemas</artifactId>
				<version>${teamdokumenthandtering-avro-schemas.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.navikt</groupId>
				<artifactId>brukernotifikasjon-schemas</artifactId>
				<version>${brukernotifikasjon.version}</version>
			</dependency>

			<!--Tjenestespesifikasjoner-->
			<dependency>
				<groupId>no.nav.dokmet</groupId>
				<artifactId>api</artifactId>
				<version>${dokmet-api.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.tjenestespesifikasjoner</groupId>
				<artifactId>nav-varsel-inn</artifactId>
				<version>${dok-legacy-tjenestespesifikasjoner.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ibm.mq</groupId>
				<artifactId>com.ibm.mq.jakarta.client</artifactId>
				<version>${ibm.mq.client.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>${joda.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot3</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>context-propagation</artifactId>
				<version>${context-propagation.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- Logging dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
